--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   bottom_navy_bar: ^5.5.0
+  google_maps_flutter: ^0.5.28+1
+  geolocator: ^5.3.2+2
 
 dev_dependencies:
   flutter_test:
